@@ -1,6 +1,12 @@
 # ChangeLog for xfce-extra/xfce4-screenshooter
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-screenshooter/ChangeLog,v 1.19 2008/06/17 12:20:03 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-screenshooter/ChangeLog,v 1.20 2008/06/28 14:26:03 angelos Exp $
+
+*xfce4-screenshooter-1.2.0 (28 Jun 2008)
+
+  28 Jun 2008; Christoph Mende <angelos@gentoo.org>
+  +xfce4-screenshooter-1.2.0.ebuild:
+  Version bump
 
 *xfce4-screenshooter-1.1.0 (17 Jun 2008)
 
